# tin

./: .gitignore  .swp  CMakeLists.txt  README.md
cmake/modules/: FindConfig++.cmake
src/central/: CMakeLists.txt
src/central/inc/: AlertAggregator.h  Central.h  CentralConfig.h
src/central/it-test/: AlertAggregator.it-test.cpp  Central.it-test.cpp  module.it-test.cpp
src/central/src/: AlertAggregator.cpp  Central.cpp  main.cpp
src/central/test/: AlertAggregator.test.cpp  module.test.cpp
src/control-center/: CMakeLists.txt
src/control-center/inc/: ControlCenter.h
src/control-center/src/: ControlCenter.cpp  main.cpp
src/core/: CMakeLists.txt
src/core/inc/: ACKBlock.h  AddressInfo.h  CommonBlock.h  ConfigBlock.h  ConfigReader.h  Connection.h  Deserializer.h  Logger.h  Serializable.h  Serializer.h  UdpConnection.h  UdpServer.h  errorhandling.h  logging.h
src/core/inc/blocks/: AbstractBlock.h  BlockReader.h  BlockType.h  CentralServerFireAlert.h  CentralServerHeartbeat.h  CntSensorConfigBlock.h  DebugBlock.h  PingBlock.h  RequestConfigBlock.h  SensorCommonBlock.h  SensorMeasurementBlock.h
src/core/resources/: cc-config.cfg  sensor-config.cfg  test-reader.cfg
src/core/src/: AddressInfo.cpp  ConfigReader.cpp  Connection.cpp  Deserializer.cpp  Serializer.cpp  UdpConnection.cpp  UdpServer.cpp  errorhandling.cpp
src/core/src/blocks/: BlockReader.cpp  BlockType.cpp  CentralServerFireAlert.cpp  CentralServerHeartbeat.cpp  CntSensorConfigBlock.cpp  DebugBlock.cpp  PingBlock.cpp  RequestConfigBlock.cpp  SensorCommonBlock.cpp  SensorMeasurementBlock.cpp
src/core/test/: BlockReader.test.cpp  ConfigReader.test.cpp  Core.test.cpp  Deserializer.test.cpp  Serializer.test.cpp
src/dto/: BlockSerializer.hpp
src/fire-dept/: CMakeLists.txt
src/fire-dept/inc/: FireDeptConfig.h
src/fire-dept/src/: FireDeptConfig.cpp  main.cpp
src/fire-dept/test/: README.md  udp_test.py
src/sensor/: CMakeLists.txt
src/sensor/inc/: Config.h  Sensor.h  SensorConfig.h
src/sensor/src/: Config.cpp  Sensor.cpp  SensorConfig.cpp  main.cpp
src/wireshark-plugin/: czujnix.lua  run-wireshark.sh
